--- a/Views/Pages/DashboardPage.xaml
+++ b/Views/Pages/DashboardPage.xaml
@@ -22,11 +22,11 @@
             <ColumnDefinition Width="Auto" />
         </Grid.ColumnDefinitions>
 
-        <ui:Button
+        <!--<ui:Button
             Grid.Column="1"
             Command="{Binding ViewModel.CounterIncrementCommand, Mode=OneWay}"
             Content="Click me!"
-            Icon="Fluent24" Margin="405,209,0,0" VerticalAlignment="Top" />
+            Icon="Fluent24" Margin="405,209,0,0" VerticalAlignment="Top" />-->
         <TextBlock
             Grid.Column="1"
             Margin="389,139,-377,0"
@@ -42,5 +42,17 @@
                 </TransformGroup>
             </ui:Image.RenderTransform>
         </ui:Image>
+        <ProgressBar x:Name="ramUsageProgressBar" Grid.Column="1" HorizontalAlignment="Left" Height="32" Margin="336,284,0,0" VerticalAlignment="Top" Width="224" Background="#72FFFFFF" Value="0">
+            <ProgressBar.Foreground>
+                <LinearGradientBrush StartPoint="0,0.5" EndPoint="1,0.5">
+                    <GradientStop Color="#FF84D5FF" Offset="0"/>
+                    <GradientStop Color="#FFE584FC" Offset="1"/>
+                    <GradientStop Color="#FFB5ACFD" Offset="0.51"/>
+                </LinearGradientBrush>
+            </ProgressBar.Foreground>
+        </ProgressBar>
+        <TextBlock Grid.Column="1" HorizontalAlignment="Left" Margin="324,300,0,0" VerticalAlignment="Top" Text="{Binding Value, ElementName=progressBar}" Foreground="Black"/>
+        <ui:TextBlock Grid.Column="1" HorizontalAlignment="Left" Margin="388,215,0,0" TextWrapping="Wrap" Text="Welcome To Sparkle!" VerticalAlignment="Top" FontFamily="Segoe UI Semibold"/>
+        <TextBlock x:Name="memoryUsageTextBlock" HorizontalAlignment="Left" VerticalAlignment="Top" Text="a" Grid.Column="1" Margin="384,238,0,0"/>
     </Grid>
 </Page>
