--- a/Views/Pages/CleanPage.xaml
+++ b/Views/Pages/CleanPage.xaml
@@ -1,14 +1,17 @@
-﻿<Page x:Class="Sparkle.Views.Pages.CleanPage"
+﻿<Page
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:Sparkle.Views.Pages"
+      xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml" x:Class="Sparkle.Views.Pages.CleanPage"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
       Title="CleanPage">
 
     <Grid>
-        
+
+        <ui:Button Content="Clean" Margin="33,227,0,0" VerticalAlignment="Top"/>
+
     </Grid>
 </Page>
