--- a/Views/Pages/DebloatPage.xaml
+++ b/Views/Pages/DebloatPage.xaml
@@ -3,15 +3,17 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:Sparkle.Views.Pages"
+      
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
       Title="DebloatPage">
+    
 
-    <Grid>
-        <ui:Button Content="Debloat" Margin="339,191,0,0" VerticalAlignment="Top" Height="36" Width="131"/>
+    <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center">
+        <ui:Button Content="Debloat" Height="36" Width="158"/>
+    </StackPanel>
 
 
-    </Grid>
 </Page>
