--- a/Views/Pages/DashboardPage.xaml
+++ b/Views/Pages/DashboardPage.xaml
@@ -23,11 +23,7 @@
             Command="{Binding ViewModel.CounterIncrementCommand, Mode=OneWay}"
             Content="Click me!"
             Icon="Fluent24" Margin="405,209,0,0" VerticalAlignment="Top" />-->
-        <TextBlock
-            Grid.Column="1"
-     
-            VerticalAlignment="Top"
-            Text="{Binding ViewModel.Counter, Mode=OneWay}" />
+
         <ui:Image Grid.Column="1" HorizontalAlignment="Center"  VerticalAlignment="Top" Source="/Views/Pages/sparkle.png" Height="183" Width="172" RenderTransformOrigin="1,1" HorizontalContentAlignment="Center" VerticalContentAlignment="Center">
             <ui:Image.RenderTransform>
                 <TransformGroup>
@@ -47,9 +43,9 @@
                 </LinearGradientBrush>
             </ProgressBar.Foreground>
         </ProgressBar>-->
-        <TextBlock Grid.Column="1" HorizontalAlignment="Left"  VerticalAlignment="Top" Text="{Binding Value, ElementName=progressBar}" Foreground="Black"/>
-        <ui:TextBlock Grid.Column="1" HorizontalAlignment="Center"  TextWrapping="Wrap" Text="Welcome To Sparkle!" FontSize="16"  VerticalAlignment="Top" FontFamily="Segoe UI Semibold"/>
+        
+        <ui:TextBlock Grid.Column="1" HorizontalAlignment="Center"  TextWrapping="Wrap" Text="Welcome To Sparkle!" FontSize="20"  VerticalAlignment="Top" FontFamily="Segoe UI Semibold"/>
         <TextBlock x:Name="memoryUsageTextBlock" HorizontalAlignment="Center" VerticalAlignment="Top" Text="a" Grid.Column="1" />
-        <TextBlock x:Name="freeMemoryTextBlock" FontSize="14" Text="Free Memory:" Grid.Column="1" HorizontalAlignment="Center" />
+        <!--<TextBlock x:Name="freeMemoryTextBlock" FontSize="14" Text="Free Memory:" Grid.Column="1" HorizontalAlignment="Center" />-->
 </StackPanel>
 </Page>
