--- a/Views/Pages/DebloatPage.xaml
+++ b/Views/Pages/DebloatPage.xaml
@@ -9,11 +9,22 @@
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
       Title="DebloatPage">
-    
 
-    <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center">
-        <ui:Button Content="Debloat" Height="36" Width="158"/>
+
+    <StackPanel HorizontalAlignment="Center" VerticalAlignment="Top" Width="807">
+
+        <StackPanel HorizontalAlignment="Center" VerticalAlignment="Top" Width="807">
+            <ui:Card Margin="0,0,0,10">
+                <StackPanel>
+                    <ui:TextBlock TextWrapping="Wrap" Text="Debloat" Width="432" HorizontalAlignment="Left"/>
+                    <ui:TextBlock TextWrapping="Wrap" Text="Removes unwanted bloatware and junk files from Microsoft." Width="432" HorizontalAlignment="Left" Foreground="#E4848484"/>
+
+                    <ui:Button Content="Debloat" Height="36" Width="158" HorizontalAlignment="Right"/>
+                </StackPanel>
+            </ui:Card>
     </StackPanel>
+    </StackPanel>
+
 
 
 </Page>
