--- a/Views/Pages/DriverPage.xaml
+++ b/Views/Pages/DriverPage.xaml
@@ -11,10 +11,10 @@
 
     <Grid>
         <StackPanel>
-
-            <ui:Button Content="Drivers Coming soon! (i see you wavy)"/>
+            <ui:Button Content="Drivers Coming soon!"/>
 
         </StackPanel>
+       
 
     </Grid>
 </Page>
